# runic

./: Cargo.toml  LICENSE  README.md  runic.mk
shell/: init.bash  init.zsh
src/: cli.rs  config.rs  handlers.rs  main.rs  makefile.rs  picker.rs  prompt.rs  shell.rs  ssh.rs
