[package]
name = "runic"
version = "0.1.0"
edition = "2024"
description = "Spotlight-like launcher for Makefile targets and SSH hosts"
license = "MIT"

[[bin]]
name = "runic"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5"
anyhow = "1.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
